// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList Should have Accordion.Toggle with "as" is Button 1`] = `
Array [
  <ForwardRef
    defaultActiveKey="0"
    key="0"
  >
    <Card
      body={false}
    >
      <CardHeader>
        <ForwardRef
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "active": false,
                "disabled": false,
                "type": "button",
                "variant": "primary",
              },
              "displayName": "Button",
              "render": [Function],
            }
          }
          eventKey="category0"
          variant="link"
        >
          toy
        </ForwardRef>
      </CardHeader>
      <AccordionCollapse
        eventKey="category0"
      >
        <CardBody>
          <sub-category
            subcategories={
              Array [
                "a",
                "b",
                "c",
              ]
            }
          />
        </CardBody>
      </AccordionCollapse>
    </Card>
  </ForwardRef>,
  <ForwardRef
    defaultActiveKey="0"
    key="1"
  >
    <Card
      body={false}
    >
      <CardHeader>
        <ForwardRef
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "active": false,
                "disabled": false,
                "type": "button",
                "variant": "primary",
              },
              "displayName": "Button",
              "render": [Function],
            }
          }
          eventKey="category1"
          variant="link"
        >
          paper
        </ForwardRef>
      </CardHeader>
      <AccordionCollapse
        eventKey="category1"
      >
        <CardBody>
          <sub-category
            subcategories={
              Array [
                "one",
                "two",
                "three",
              ]
            }
          />
        </CardBody>
      </AccordionCollapse>
    </Card>
  </ForwardRef>,
  <ForwardRef
    defaultActiveKey="0"
    key="2"
  >
    <Card
      body={false}
    >
      <CardHeader>
        <ForwardRef
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "active": false,
                "disabled": false,
                "type": "button",
                "variant": "primary",
              },
              "displayName": "Button",
              "render": [Function],
            }
          }
          eventKey="category2"
          variant="link"
        >
          food
        </ForwardRef>
      </CardHeader>
      <AccordionCollapse
        eventKey="category2"
      >
        <CardBody>
          <sub-category
            subcategories={
              Array [
                "apple",
                "pear",
                "orange",
              ]
            }
          />
        </CardBody>
      </AccordionCollapse>
    </Card>
  </ForwardRef>,
]
`;

exports[`ProductList Should render without error 1`] = `
<ProductList
  products={
    Array [
      Object {
        "items": Array [
          "a",
          "b",
          "c",
        ],
        "name": "toy",
      },
      Object {
        "items": Array [
          "one",
          "two",
          "three",
        ],
        "name": "paper",
      },
      Object {
        "items": Array [
          "apple",
          "pear",
          "orange",
        ],
        "name": "food",
      },
    ]
  }
>
  <ForwardRef
    defaultActiveKey="0"
    key="0"
  >
    <div
      className="accordion"
    >
      <Card
        body={false}
      >
        <div
          className="card"
        >
          <CardHeader>
            <div
              className="card-header"
            >
              <ForwardRef
                as={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  }
                }
                eventKey="category0"
                variant="link"
              >
                <Button
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="link"
                >
                  <button
                    className="btn btn-link"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    toy
                  </button>
                </Button>
              </ForwardRef>
            </div>
          </CardHeader>
          <AccordionCollapse
            eventKey="category0"
          >
            <Collapse
              appear={false}
              dimension="height"
              getDimensionValue={[Function]}
              in={false}
              mountOnEnter={false}
              timeout={300}
              unmountOnExit={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                aria-expanded={null}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={false}
              >
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <CardBody>
                    <div
                      className="card-body"
                    >
                      <sub-category
                        subcategories={
                          Array [
                            "a",
                            "b",
                            "c",
                          ]
                        }
                      />
                    </div>
                  </CardBody>
                </div>
              </Transition>
            </Collapse>
          </AccordionCollapse>
        </div>
      </Card>
    </div>
  </ForwardRef>
  <ForwardRef
    defaultActiveKey="0"
    key="1"
  >
    <div
      className="accordion"
    >
      <Card
        body={false}
      >
        <div
          className="card"
        >
          <CardHeader>
            <div
              className="card-header"
            >
              <ForwardRef
                as={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  }
                }
                eventKey="category1"
                variant="link"
              >
                <Button
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="link"
                >
                  <button
                    className="btn btn-link"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    paper
                  </button>
                </Button>
              </ForwardRef>
            </div>
          </CardHeader>
          <AccordionCollapse
            eventKey="category1"
          >
            <Collapse
              appear={false}
              dimension="height"
              getDimensionValue={[Function]}
              in={false}
              mountOnEnter={false}
              timeout={300}
              unmountOnExit={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                aria-expanded={null}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={false}
              >
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <CardBody>
                    <div
                      className="card-body"
                    >
                      <sub-category
                        subcategories={
                          Array [
                            "one",
                            "two",
                            "three",
                          ]
                        }
                      />
                    </div>
                  </CardBody>
                </div>
              </Transition>
            </Collapse>
          </AccordionCollapse>
        </div>
      </Card>
    </div>
  </ForwardRef>
  <ForwardRef
    defaultActiveKey="0"
    key="2"
  >
    <div
      className="accordion"
    >
      <Card
        body={false}
      >
        <div
          className="card"
        >
          <CardHeader>
            <div
              className="card-header"
            >
              <ForwardRef
                as={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  }
                }
                eventKey="category2"
                variant="link"
              >
                <Button
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="link"
                >
                  <button
                    className="btn btn-link"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    food
                  </button>
                </Button>
              </ForwardRef>
            </div>
          </CardHeader>
          <AccordionCollapse
            eventKey="category2"
          >
            <Collapse
              appear={false}
              dimension="height"
              getDimensionValue={[Function]}
              in={false}
              mountOnEnter={false}
              timeout={300}
              unmountOnExit={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                aria-expanded={null}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={false}
              >
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <CardBody>
                    <div
                      className="card-body"
                    >
                      <sub-category
                        subcategories={
                          Array [
                            "apple",
                            "pear",
                            "orange",
                          ]
                        }
                      />
                    </div>
                  </CardBody>
                </div>
              </Transition>
            </Collapse>
          </AccordionCollapse>
        </div>
      </Card>
    </div>
  </ForwardRef>
</ProductList>
`;
